# tesla-order-status

./: .gitignore  README.md  README_DE.md  hotfix.py  pyproject.toml  tesla_order_status.py  update_check.py
app/: config.py  update_check.py
app/migrations/: 2025-08-30-datafolders.py  2025-11-12-history-reference.py  2025-11-12-orders-map.py
app/utils/: auth.py  banner.py  colors.py  connection.py  helpers.py  history.py  locale.py  migration.py  option_codes.py  orders.py  params.py  telemetry.py  timeline.py
data/public/lang/: de.json  en.json  pl.json  sv.json
data/public/option-codes/: 000_teslahunt.json  050_directlease.json  100_chrisi51.json
option-codes/: 050_directlease.json  100_chrisi51.json  directlease.json  directlease.py  teslahunt.json
